--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sanity/block-content-to-react": "^2.0.7",
+    "@sanity/client": "^2.0.1",
+    "@sanity/image-url": "^0.140.19",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.5.5",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-social-icons": "^5.14.0",
+    "react-tooltip": "^4.2.21",
+    "sass": "^1.54.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
